# cortex-arena

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README.zh-CN.md  SECURITY.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  evaluation.md  research.md
opponents/starter/: main.py
reports/: baseline-v0.1.0.json
src/cortex_arena/: __init__.py  __main__.py  agent.py  cli.py  combat.py  config.py  models.py  pathfinding.py  planner.py  protocol.py  starter.py  world.py
src/cortex_arena/player_scripts/: __init__.py  cortex.py  starter.py
tests/: conftest.py  test_agent.py  test_cli.py  test_config.py  test_pathfinding.py  test_planning.py  test_protocol.py  test_world.py
