[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "cortex-arena"
version = "0.1.0"
description = "A hierarchical, fog-of-war strategy agent for Lux AI Season 3"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { file = "LICENSE" }
authors = [
  { name = "bihraint-oss" },
]
keywords = [
  "artificial-intelligence",
  "game-agent",
  "lux-ai",
  "pathfinding",
  "strategy-game",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Games/Entertainment :: Turn Based Strategy",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "luxai-s3==0.2.1",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.11",
]

[project.scripts]
cortex-arena = "cortex_arena.cli:main"

[project.urls]
Documentation = "https://github.com/bihraint-oss/cortex-arena#readme"
Issues = "https://github.com/bihraint-oss/cortex-arena/issues"
Source = "https://github.com/bihraint-oss/cortex-arena"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex_arena"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["cortex_arena"]
omit = [
  "src/cortex_arena/__main__.py",
  "src/cortex_arena/player_scripts/*",
  "src/cortex_arena/starter.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
